# StudyOpenCV

./: build.gradle  settings.gradle
FaceVerification/: build.gradle
FaceVerification/jni/: Android.mk  CMakeLists.txt  DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
FaceVerification/src/androidTest/java/com/dong/faceverification/: ExampleInstrumentedTest.java
FaceVerification/src/main/: AndroidManifest.xml
FaceVerification/src/main/java/com/dong/faceverification/: DetectionBasedTracker.java
FaceVerification/src/main/res/raw/: haarcascade_profileface.xml  lbpcascade_frontalface.xml
FaceVerification/src/test/java/com/dong/faceverification/: ExampleUnitTest.java
OpenCV410/: build.gradle
OpenCV410/java/src/org/opencv/android/: CameraBridgeViewBase.java
OpenCV410/native/jni/abi-arm64-v8a/: OpenCVModules-release.cmake
OpenCV410/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake  OpenCVModules-release.cmake
OpenCV410/native/jni/abi-x86/: OpenCVConfig.cmake  OpenCVModules-release.cmake
OpenCV410/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules-release.cmake
app/: build.gradle
app/src/androidTest/java/com/dong/studyopencv/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dong/studyopencv/: MainActivity.kt  PermissionsManager.java
app/src/main/java/com/dong/studyopencv/face/: FdActivity.java  (+1 more)
app/src/main/res/layout/: activity_fd.xml  activity_fd2.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dong/studyopencv/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
